# homelab-cluster

./: .gitignore  .windsurfrules  AGENTS.md  Makefile  README.md  common-inputs.yaml  flake.nix  generate-apps.sh  mkdocs.yaml  opencode.json  pyproject.toml  root.hcl  test-model.sh
.github/workflows/: deploy.yaml  generate-apps.yml  pages.yaml  release.yaml
.windsurf/workflows/: add-service.md
docs/: .pages
docs/architecture/: .pages  cluster-topology.md  gitops-flow.md  infrastructure-components.md
docs/guides/: .pages  adding-a-service.md  dns-and-ingress.md  managing-secrets.md
docs/operator-guide/: .pages  terraform-modules.md
docs/reference/: .pages  service-catalog.md  sync-wave-reference.md
manifests/bootstrap/: argocd-mcp-app.yaml  argocd-secret-app.yaml  authentik-app.yaml  calibre-web-app.yaml  cert-manager-app.yaml  cloudflared-app.yaml  copyparty-app.yaml  dapr-app.yaml  dex-app.yaml  discord-bot-app.yaml  external-secrets-app.yaml  fittrackee-app.yaml  generic-device-plugin-app.yaml  homepage-app.yaml  homer-app.yaml  jellyfin-app.yaml  jellyseerr-app.yaml  kustomization.yaml  lidarr-app.yaml  llama-cpp-app.yaml  longhorn-app.yaml  mastra-app.yaml  metallb-app.yaml  metrics-server-app.yaml  monitoring-app.yaml  nextcloud-app.yaml  nixos-mcp-app.yaml  open-webui-app.yaml  openbooks-app.yaml  pihole-app.yaml  pikvm-app.yaml  prowlarr-app.yaml  qbittorrent-app.yaml  radarr-app.yaml  searxng-app.yaml  sonarr-app.yaml  traefik-app.yaml  vault-app.yaml  vaultwarden-app.yaml  (+1 more)
rpi5-nixos/: DEPLOYMENT.md  flake.nix  k3s-agent.nix
(+282 files in other folders)
